conformance_test/core_language_tests/positive_tests/15_templates/1509_match_operation/NegSem_1509_MatchOperation_002.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:15.9, Ensure that the match operation refuses not initialized operands. 
 ** @verdict  pass reject
 *****************************************************************/

// Restriction b) The operands of the match operation shall be completely initialized.
 
module NegSem_1509_MatchOperation_002 {

	type component GeneralComp { }

	template integer m_lessThan10 := (-infinity..9);

	testcase TC_NegSem_1509_MatchOperation_002() runs on GeneralComp {
		
		var integer v_value;
		
		if (match(v_value, m_lessThan10)) { // error: The operands of the match operation shall be completely initialized.
			setverdict(pass);
		} else {
			setverdict(fail,"Reason: ", v_value);
		}
	}

	control{
		execute(TC_NegSem_1509_MatchOperation_002());
	}

}
